[gd_scene load_steps=17 format=3 uid="uid://dg85rpiiluct2"]

[ext_resource type="PackedScene" uid="uid://b020vwlof58o8" path="res://Scenes/speaker.tscn" id="1_7aw8r"]
[ext_resource type="PackedScene" uid="uid://dqs73dcu3a4qv" path="res://Scenes/light.tscn" id="1_7th6s"]
[ext_resource type="PackedScene" uid="uid://dnn52v1igl1sx" path="res://Scenes/door.tscn" id="1_iwycq"]
[ext_resource type="Script" path="res://Scripts/RoomOne.gd" id="1_udxsx"]
[ext_resource type="FontFile" uid="uid://nf4hj6b6g8di" path="res://Ressources/Fonts/Lexend-ExtraBold.ttf" id="2_inx3q"]
[ext_resource type="Material" uid="uid://bdqe31xmn3pqy" path="res://Ressources/Materials/floor_mat.tres" id="3_0pl6j"]
[ext_resource type="Material" uid="uid://d1rhmi4070sgl" path="res://Ressources/Materials/spawn_room_wall.tres" id="3_bfuwq"]
[ext_resource type="AudioStream" uid="uid://b3fnpgpxx5ubt" path="res://Ressources/Audios/left_door.mp3" id="5_marmv"]
[ext_resource type="FontFile" uid="uid://c80nrjbxxi5nm" path="res://Ressources/Fonts/Tinos-Regular.ttf" id="9_q00qq"]

[sub_resource type="BoxMesh" id="BoxMesh_p6l8i"]
size = Vector3(1.3, 0.5, 0.1)

[sub_resource type="ViewportTexture" id="ViewportTexture_k770y"]
viewport_path = NodePath("Frame/Sprite3D/SubViewport")

[sub_resource type="BoxMesh" id="BoxMesh_n6vxj"]
size = Vector3(16, 0.1, 16)

[sub_resource type="PlaneMesh" id="PlaneMesh_m3w6n"]
size = Vector2(15, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_1asw6"]
size = Vector3(15, 0, 15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kkpd6"]
diffuse_mode = 3
albedo_color = Color(0.988235, 0.682353, 0, 1)
metallic = 1.0

[sub_resource type="TextMesh" id="TextMesh_le68o"]
material = SubResource("StandardMaterial3D_kkpd6")
text = "3"
font = ExtResource("9_q00qq")

[node name="RoomOne" type="Node3D"]
script = ExtResource("1_udxsx")

[node name="Frame" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.00295, 2.90853, -14.8454)
visible = false
mesh = SubResource("BoxMesh_p6l8i")

[node name="Sprite3D" type="Sprite3D" parent="Frame"]
transform = Transform3D(0.987008, -0.160674, 0, 0.160674, 0.987008, 0, 0, 0, 1, 0, 0.0213704, 0.0503416)
texture = SubResource("ViewportTexture_k770y")

[node name="SubViewport" type="SubViewport" parent="Frame/Sprite3D"]
transparent_bg = true
size = Vector2i(150, 20)

[node name="Label" type="Label" parent="Frame/Sprite3D/SubViewport"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -15.0
offset_right = 59.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_inx3q")
theme_override_font_sizes/font_size = 24
text = "Left Door"
horizontal_alignment = 1

[node name="Light" parent="." instance=ExtResource("1_7th6s")]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -3, 3.8, -8)

[node name="SpotLight3D3" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1.01954, 4.48226, -14.7514)
spot_angle_attenuation = 3.86

[node name="SpotLight3D4" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6.98046, 4.48226, -14.7514)
spot_angle_attenuation = 3.86

[node name="Ceiling" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3.9, -7.5)
mesh = SubResource("BoxMesh_n6vxj")

[node name="Speaker" parent="." instance=ExtResource("1_7aw8r")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -3, 3, -14.7031)
audio_sources = Array[AudioStream]([ExtResource("5_marmv")])
audio_subtitles = Array[String](["What ever you do, don't go through the left door."])

[node name="Door" parent="." instance=ExtResource("1_iwycq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -14.95)
default_color = Color(0.976471, 0.878431, 0.815686, 1)
whats_behind_the_door = "Room2"
door_text = "Right door"
is_good = true

[node name="Door2" parent="." instance=ExtResource("1_iwycq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -14.95)
default_color = Color(0.976471, 0.878431, 0.815686, 1)
whats_behind_the_door = "DeathRoom"
door_text = "Left Door"

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.5)
material_override = ExtResource("3_0pl6j")
mesh = SubResource("PlaneMesh_m3w6n")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.5)
shape = SubResource("BoxShape3D_1asw6")

[node name="WallCombinerCSG" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -14.95)
size = Vector3(15, 4, 0.1)
material = ExtResource("3_bfuwq")

[node name="CSGBox3D2" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 7.45, 2, -7.5)
size = Vector3(15, 4, 0.1)
material = ExtResource("3_bfuwq")

[node name="CSGBox3D3" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.45, 2, -7.5)
size = Vector3(15, 4, 0.1)
material = ExtResource("3_bfuwq")

[node name="CSGBox3D6" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -0.05)
size = Vector3(15, 4, 0.1)
material = ExtResource("3_bfuwq")

[node name="CSGBox3D7" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1.2, -0.15)
operation = 2
size = Vector3(1.45, 2.7, 0.3)

[node name="CSGBox3D4" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.006, 1.2, -14.95)
operation = 2
size = Vector3(1.45, 2.7, 0.3)

[node name="CSGBox3D5" type="CSGBox3D" parent="WallCombinerCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.994, 1.2, -14.95)
operation = 2
size = Vector3(1.45, 2.7, 0.3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99308, 1.99935, -14.8634)
visible = false
mesh = SubResource("TextMesh_le68o")

[connection signal="light_is_on" from="Light" to="." method="_on_light_light_is_on"]
